# zenoh-projects

./: .gitignore  .gitmodules  Cargo.toml  README.MD  clean.sh  clean_target.sh  design.drawio  hoverboard-espnow.drawio  sdkconfig.defaults
.cargo/: config.toml
actix/: Cargo.toml  config.json  config.yaml
actors/: Cargo.toml
actors/src/: pubsub_actor.rs
akka/: Cargo.toml
akka/examples/: tester.rs
akka/src/: actor copy.rs  actor.rs  alive.rs  brain.rs  broker.rs  client.rs  eventbus_gpt.rs  lib.rs  limero.rs  main copy 2.rs  main copy 4.rs  main copy 5.rs  main copy.rs  main.rs  multicast.rs  udp.rs  value.rs  zenoh_actor.rs
cddl/: compass.cddl  cutter.cddl  esp_now.cddl  esp_now.rs  espnow_bus.rs  hoverboard.cddl  mqtt-sn.cddl  ps4.cddl
dashboard-app/: package-lock.json  package.json
doc/: .$design.drawio.bkp  hoverboard-espnow.drawio
esp-no-std/: Cargo.toml
esp32-actors/: Cargo.toml  readme.md
esp32-actors-rs/: Cargo.toml
esp32-actors-rs/.cargo/: config.toml
esp32-actors-rs/src/: framer_actor.rs  proxy_message.rs  uart_actor.rs
esp32-actors/src/: esp_now_actor.rs  framer_actor.rs  led_actor.rs  lib.rs  proxy_message.rs  pubsub_actor.rs  sys_actor.rs  uart_actor.rs
esp32-bare/: Cargo.toml  esp32-bare.code-workspace
esp32-dc-motor/: Cargo.toml  build.rs  esp_idf_sys_rebuild.sh  readme.md  tree.txt  wrapper.h
esp32-dc-motor/.cargo/: config.toml
esp32-dc-motor/doc/: .~lock.design.odt#  design.odt
esp32-dc-motor/src/: main.rs  motor_actor.rs
esp32-devices/: .gitignore  Cargo.toml
esp32-devices/.cargo/: config.toml
esp32-devices/.embuild/espressif/: espidf.constraints.v5.3.txt
esp32-devices/src/: http_actor.rs  main.rs  mqtt_actor.rs  pubsub_mqtt.rs  wifi_actor.rs
esp32-devices/src/limero/: mod.rs
esp32-devices/src/pubsub/: mod.rs  payload.rs
esp32-espnow-client/: Cargo.toml
esp32-espnow-display/: Cargo.toml
esp32-espnow-gateway/: Cargo.toml  esp32-bare.code-workspace  readme.md
esp32-espnow-gateway/.cargo/: config.toml
esp32-espnow-gateway/src/: main.rs  proxy_msg.rs
esp32-hoverboard/: Cargo.toml  hoverboard_esp32.drawio  readme.md
esp32-hoverboard-rs/: Cargo.toml  espflash.toml  readme.md
esp32-hoverboard-rs/.cargo/: config.toml
esp32-hoverboard-rs/doc/: hoverboard_esp32.drawio
esp32-hoverboard-rs/src/: main.rs  motor.rs
esp32-hoverboard/src/: main.rs  msg.rs  topic_actor.rs
esp32-idf/: Cargo.toml  README.MD  espflash.toml  features.txt  sdkconfig.defaults
esp32-idf-dc-motor/: Cargo.toml  bloat.sh  error.txt  sdkconfig.defaults
esp32-idf-dc-motor/.cargo/: config.toml
esp32-idf-dc-motor/src/: esp_now_actor.rs  logger.rs  main.rs
esp32-idf-motor/: Cargo.toml
esp32-idf-motor/src/: main.rs
esp32-idf-std-motor/: Cargo.toml  espflash.toml  readme.md
esp32-idf-std-motor/doc/: design.drawio
esp32-idf-std-motor/src/: esp_now_actor.rs  led_actor.rs  limero_logger.rs  main.rs  motor_actor.rs
esp32-idf/.cargo/: config.toml
esp32-idf/src/: led_actor.rs  main.rs  mqtt_actor.rs  wifi_actor.rs
esp32-idf/src/limero/: logger.rs  mod.rs  timer.rs
esp32-idf/src/pubsub/: mod.rs  payload.rs  payload_cbor.rs  payload_json.rs
esp32-limero-embassy/: Cargo.toml
esp32-limero-embassy-rs/: readme.md
esp32-limero-embassy/src/: lib.rs  timer.rs
esp32-limero-std/: Cargo.toml
esp32-limero-std/.cargo/: config.toml
esp32-limero-std/src/: lib.rs  logger.rs  timer.rs
esp32-mqtt/: Cargo.toml
esp32-mqtt/.cargo/: config.toml
esp32-mqtt/src/: main.rs
esp32-mqtt/src/limero/: logger.rs  mod.rs
esp32-mqtt/src/pubsub/: mod.rs  payload.rs
esp32-ps4-espnow/: readme.md
esp32-std-motor/: Cargo.toml
esp32-std-motor/src/: esp_now_actor.rs  led_actor.rs  logger.rs  main.rs
esp_no_std/: Cargo.toml  README.MD
espidf_rust/: Cargo.toml  README.MD  build.rs
espidf_rust/.cargo/: config.toml
espidf_rust/src/: client.rs  led.rs  main.rs  ping_pong.rs  pubsub.rs  sys.rs  uart.rs
espidf_rust/src/limero/: logger.rs  mod.rs  timer.rs
espidf_rust/src/protocol/: client.rs  mod.rs  msg.rs  server.rs  uart.rs
espidf_serial/: .gitignore  README.MD  platformio.ini  sdkconfig.esp32doit-devkit-v1
espnow-gateway/: Cargo.toml
eventbus/: Cargo.toml
hoverboard-flash/: README.MD
hoverboard-linux/: Cargo.toml  Readme.md
hoverboard-linux/src/: main.rs
limero-esp32-embassy/: Cargo.toml
limero-linux-tokio/: Cargo.toml  readme.md
limeros/: Cargo.toml  install.sh  limeros.md  readme.md
limeros/src/: eventbus.rs  lib.rs  msgs.rs  scout.rs
limeros/tests/: msgs_roundtrip.rs
limeross/: Cargo.toml  readme.md
limeross/src/: lib.rs  msgs.rs  scout.rs
lwip-stm32cube/: library.md  platformio.ini  readme.md
mc-broker/: Cargo.toml
mc-broker/src/: main.rs
mc-esp32/: CMakeLists.txt  msg.json  msg.proto  platformio.ini  readme.md  sdkconfig  sdkconfig.old
mc-show/: Cargo.toml  readme.md
mc-show/src/: limero.rs  main copy.rs  main.rs  udp_cbor_async.rs
mc-web/: Cargo.toml  readme.md
mc-web/doc/: architecture.md
mc-web/src/: actor.rs  main.rs  property_cache.rs  protocol.rs  value.rs
msg/: Cargo.toml
msg-rs/: readme.md
msg/src/: cbor.rs  dc_motor.rs  esp_now.rs  framer.rs  hb.rs  hb_driver.rs  hoverboard.h  json.rs  lib.rs  ps4.h  ps4.rs  pubsub.rs  sys.rs
prosty/: Cargo.toml  build.rs  readme.md
prosty/examples/: limero.cpp  limero.rs  tester.rs
prosty/proto/: message.proto
prosty/src/: cache.rs  cpp_cbor.tera  cpp_json.tera  cpp_json_src.tera  cpp_mix.tera  cpp_mix_inc.tera  cpp_mix_src.tera  ir.rs  main.rs  message.proto  rust_cbor.tera  rust_json.tera  rust_mix.tera
prosty/syntax/: mermaid.pest  mermaid2.pest  message.proto  proto.pest  state_diagram copy 2.pest  state_diagram copy.pest  state_diagram.pest  states.md
proxy_rs/: Cargo.toml  Cross.toml  build.rs  pre-build.sh  protocol.cddl  serial.proto
proxy_rs/src/: main.rs  protocol.cddl
pubsub/: Cargo.toml
pubsub/src/: lib.rs  payload_cbor.rs  payload_json.rs
scripts/: build_zenoh_serial.sh  config.json5  dst.sh  (+7 more)
serdes/: Cargo.toml
serdes/.cargo/: config.toml
serdes/src/: framer.rs  lib.rs  msg.rs  payload_cbor.rs
(+661 files in other folders)
