[workspace]

members = ["esp32-espnow-gateway", "esp32-limero-embassy","pubsub","zenoh_proxy","serdes","esp32-actors"]
exclude = ["esp_no_std","esp32-devices","esp32-idf","esp32-mqtt","espidf_serial","espidf_tcp","examples","zenoh_egui","zenoh_proxy","zenoh_sender","zenohd"]
resolver="2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
