[workspace]

exclude = [
  "esp32-devices",
  "esp32-idf",
  "esp32-mqtt",
  "espidf_serial",
  "espidf_tcp",
  "examples",
  "zenoh_egui",
  "zenoh_proxy",
  "zenoh_sender",
  "zenohd",
  "esp32-espnow-display",
  "esp32-limero-embassy",
  "pubsub",
  "zenoh_proxy",
  "serdes",
  "esp32-actors",
  "esp32-espnow-client",
  "zenoh_proxy",
  "esp_no_std",
]
members = [
  "esp32-espnow-gateway",
  "esp32-hoverboard",
	]

resolver = "2"
[workspace.dependencies]
esp-hal = {version = "0.19.0", features = ["esp32", "log"]}
esp-hal-embassy = {version = "0.3.0", features = ["esp32"]}
esp-ieee802154 = {version = "0.2.0"}

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
