[workspace]

exclude = [
  "esp32-devices",
  "esp32-idf",
  "esp32-mqtt",
  "espidf_serial",
  "espidf_tcp",
  "examples",
  "zenoh_egui",
  "zenoh_proxy",
  "zenoh_sender",
  "zenohd",
  "esp32-espnow-display",
  "esp32-limero-embassy",
  "esp32-limero-std",
  "esp32-idf-motor",
  "pubsub",
  "zenoh_proxy",
  "serdes",
  "esp32-espnow-client",
  "zenoh_proxy",
  "esp_no_std",
  "limero-linux-tokio",
  "esp-idf-test",
  "esp32-std-motor",
  "esp-idf-sys",
    "esp32-espnow-gateway",
  "esp32-hoverboard",
  "esp32-actors",
  "esp32-idf-motor",
  "msg",
  "esp32-idf-dc-motor",
  "esp32-limero-std",
]
members = [

]

resolver = "2"

[workspace.dependencies]
embassy-executor = {version = "0.6.1", features = [
  "task-arena-size-32768",
  "integrated-timers",
  "executor-thread",
]}
embassy-futures = "0.1.1"
# embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.1"
embassy-time-driver = {version = "0.1.0"}
# embassy-usb         = { version = "0.2.0", default-features = false, optional = true }
# embedded-can        = "0.4.1"
# embedded-graphics   = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-02 = {version = "0.2.7", package = "embedded-hal", features = [
  "unproven",
]}
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-io = {version = "0.6.1", default-features = false}
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

esp-alloc = {version = "*"}
esp-backtrace = {version = "*", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
]}
esp-hal = {version = "0.21.1", features = ["esp32", "log"]}
esp-hal-embassy = {version = "0.4.0", features = ["esp32"]}
esp-ieee802154 = {version = "0.3.1"}
esp-println = {version = "*", features = ["esp32", "log"]}
esp-storage = {version = "*"}
esp-wifi = {version = "*", features = [
  "esp32",
  "esp-now",
  "async",
  "wifi",
  "utils",
  "wifi-default",
]}

cobs = {version = "0.2.3", default-features = false, features = []}
crc = {version = "3.0.1", features = []}
log = {version = "0.4.22"}
minicbor = {version = "0.25.1", default-features = false, features = [
  "derive",
  "alloc",
  "half",
]}
minicbor-ser = {version = "*", default-features = false, features = ["alloc", "alloc"]}

anyhow = {version = "1.0.87", default-features = false}
bitfield = "0.17.0"
byte = {version = "0.2.7"}

limero_esp32 = {path = "esp32-limero-embassy"}
# pubsub = { path = "../pubsub" }
# serdes = { path = "../serdes" }
actors = {path = "esp32-actors"}
msg = {path = "msg"}
serde = {version = "1.0.210", default-features = false}

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[metadata.esp-idf-sys]
esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults", "sdkconfig.defaults.ble"]
esp_idf_tools_install_dir = "global"
# native builder only
# esp_idf_version = "branch:release/v4.4"
esp_idf_components = ["pthread"]
