[package]
name = "actors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
aes = "0.8.4"
aligned = { version = "0.4.2", optional = true }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
    "macros",
    "async",
] }
cfg-if = "1.0.0"
critical-section = "1.1.2"
crypto-bigint = { version = "0.5.5", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false, features = [
    "sec1",
] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "integrated-timers",
] }
embassy-futures = "0.1.1"
# embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.1"
embassy-time-driver = { version = "0.1.0", optional = true }
# embassy-usb         = { version = "0.2.0", default-features = false, optional = true }
# embedded-can        = "0.4.1"
# embedded-graphics   = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-02 = { version = "0.2.7", package = "embedded-hal", features = [
    "unproven",
] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
esp-alloc = { version = "*" }
esp-backtrace = { version = "*", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "*", features = ["esp32", "log"] }
esp-hal-embassy = { version = "*", features = ["esp32"] }
esp-ieee802154 = { version = "*", optional = true }
esp-println = { version = "*", features = ["esp32", "log"] }
esp-storage = { version = "*", optional = true }
esp-wifi = { version = "*", features = [
    "esp32",
    "esp-now",
    "async",
    "wifi",
    "utils",
    "wifi-default",
] }
fugit = "0.3.7"
heapless = "0.8.0"
hex-literal = "0.4.1"
hmac = { version = "0.12.1", default-features = false }
ieee80211 = { version = "0.4.0", default-features = false }
ieee802154 = "0.6.1"
lis3dh-async = "0.9.3"
log = "0.4.22"
nb = "1.1.0"
p192 = { version = "0.13.0", default-features = false, features = [
    "arithmetic",
] }
p256 = { version = "0.13.2", default-features = false, features = [
    "arithmetic",
] }
portable-atomic = { version = "1.6.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
# smart-leds          = "0.4.0"
# smoltcp             = { version = "0.11.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
# ssd1306             = "0.8.4"
static_cell = { version = "2.1.0", features = ["nightly"] }
# usb-device          = "0.3.2"
# usbd-serial         = "0.2.2"

minicbor = { version = "*", default-features = false, features = [
    "derive",
    "alloc",
    "half",
] }
minicbor-ser = { version = "*", default-features = false, features = ["alloc"] }
cobs = { version = "0.2.3", default-features = false, features = [] }
crc = { version = "3.0.1", features = [] }
byte = { version = "0.2.7" }
bitfield = "0.16.1"
anyhow = { version = "1.0", default-features = false }

limero = { path = "../limero-esp32-embassy" }
pubsub = { path = "../pubsub" }
serdes = { path = "../serdes" }
serde = { version = "1.0", default-features = false }

[features]
default = ["esp32","gateway"]
esp32 = ["esp-println/esp32", "esp-storage?/esp32"]
linux = []
async = ["esp-hal/async"]
gateway = [] # esp-now gateway to uart
client = [] # esp-now client

embedded-hal-02 = ["esp-hal/embedded-hal-02"]
embedded-hal = ["esp-hal/embedded-hal"]

embassy-generic-timers = ["embassy-time/generic-queue-8"]

opsram-2m = ["esp-hal/opsram-2m"]
psram-2m = ["esp-hal/psram-2m"]


