[package]
name = "akka"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio ={version="*",features = ["full"]}
async-trait="0.1.88"
thiserror="*"
actix="0.13.5"
actix-rt ="*"
# ractor={ version = "0.15.6",features = ["async-trait"]}
env_logger="*"
log="*"
chrono="*"
base64="*"
serde="*"
serde_json = "1.0"
serde_cbor ="*"
anyhow="1.0.98"
futures="*"
socket2="*"