[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "actors"
publish = false
version = "0.1.0"

[dependencies]
limero = { path = "../esp32-limero-embassy-rs" }
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
esp-radio = { version="0.17.0", features=["esp32","wifi","unstable"]}
esp-idf-hal = { version="0.45.2",features=["unstable"] }
xtensa-lx = { version = "0.13.0", features = [] }
esp-backtrace = { version="0.18.1", features =["esp32","println"]}
embedded-io-async = "*"


aes = "0.8.4"
aligned = {version = "0.4.2", optional = true}

fugit = "0.3.7"
heapless = "0.9.1"
hex-literal = "1.0.0"
hmac = {version = "0.12.1", default-features = false}

lis3dh-async = "0.9.3"
log = "0.4.22"
nb = "1.1.0"
p192 = {version = "0.13.0", default-features = false, features = [
  "arithmetic",
]}
p256 = {version = "0.13.2", default-features = false, features = [
  "arithmetic",
]}
portable-atomic = {version = "1.6.0", default-features = false}
sha2 = {version = "0.10.8", default-features = false}
# smart-leds          = "0.4.0"
# smoltcp             = { version = "0.11.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
# ssd1306             = "0.8.4"
static_cell = {version = "2.1.0", features = ["nightly"]}
# usb-device          = "0.3.2"
# usbd-serial         = "0.2.2"

minicbor = {version = "*", default-features = false, features = [
  "derive",
  "alloc",
  "half",
]}
# minicbor-ser = { version = "*", default-features = false, features = ["alloc"] }
anyhow = {version = "1.0", default-features = false}
bitfield = "0.19.3"
byte = {version = "0.2.7"}
cobs = {version = "0.5.0", default-features = false, features = []}
crc = {version = "3.0.1", features = []}

# pubsub = { path = "../pubsub" }
# serdes = { path = "../serdes" }
msg = {path = "../msg-rs"}
serde = {version = "1.0.210", default-features = false, features = ["derive", "alloc"]}
# serde_json= { version="*",default-features = false, features = ["alloc"] }

[features]
async = []

[dependencies.esp-rom-sys]
version = "0.1.2"
features = ["esp32"] # Replace "esp32" with the appropriate feature for your target
