[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp32-dc-motor"
publish = false
version = "0.0.0"

[dependencies]
actors = {path = "../esp32-actors"}
const-fnv1a-hash = "1.1.0"
embassy-executor = {workspace = true}
embassy-futures = {workspace = true}
embassy-sync = {workspace = true}
embassy-time = {workspace = true}
embedded-io-async = {workspace = true}
esp-alloc = {workspace = true}
esp-backtrace = {workspace = true}
esp-hal = {workspace = true}
esp-hal-embassy = {workspace = true}
esp-wifi = {workspace = true}
limero = {path = "../esp32-limero-embassy"}
log = {workspace = true}
minicbor = {workspace = true}
msg = {path = "../msg"}
portable-atomic = {version = "1.9.0", default-features = false}

[features]
default = []
embassy-generic-timers = ["embassy-time/generic-queue-8"]
