[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp32-dc-motor"
publish = false
version = "0.0.0"

[build-dependencies]
embuild = "0.31"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
const-fnv1a-hash = "1.1.0"
anyhow = { workspace = true }
bitfield = { workspace = true }
byte = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-io-async = { workspace = true }
esp-alloc = { workspace = true }
esp-backtrace = { workspace = true }
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }
esp-wifi = { workspace = true }
log = { workspace = true }

msg = { path = "../msg" }
actors = { path = "../esp32-actors" }
limero = { path = "../esp32-limero-embassy" }

minicbor = { version = "0.25.1", default-features = false, features = [
  "derive",
  "alloc",
  "half",
] }
portable-atomic = { version = "1.9.0", default-features = false }
critical-section = { version = "1.2.0", default-features = false }

[features]
default = []
