[package]
name = "esp32-devices"
version = "0.1.0"
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.35.0", default-features = false }
esp-idf-hal = { version = "0.44.1", optional = true, default-features = false }
esp-idf-svc = { version = "0.49.1", optional = true, default-features = false }
embedded-svc = { version = "0.28.0", optional = true, default-features = false }
anyhow = "1.0.75"

[build-dependencies]
embuild = "0.32.0"
