[package]
name = "esp32-espnow-gateway"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
    esp-wifi = { workspace = true }
    esp-hal = { workspace = true }
    esp-backtrace = { workspace = true }
    esp-alloc = { workspace = true }
    esp-hal-embassy = { workspace = true }
    embassy-executor = { workspace = true }
    embassy-futures = { workspace = true }
    embassy-time = { workspace = true }
    embassy-sync = { workspace = true }
    embedded-io-async = { workspace = true }
    

# aes = "0.8.4"
# aligned = { version = "0.4.2", optional = true }
# bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
#     "macros",
#     "async",
# ] }
# cfg-if = "1.0.0"
# critical-section = "1.1.2"
# crypto-bigint = { version = "0.5.5", default-features = false }
# elliptic-curve = { version = "0.13.8", default-features = false, features = [
#     "sec1",
# ] }

#  fugit = "0.3.7"
# heapless = "0.8.0"
# hex-literal = "0.4.1"
# hmac = { version = "0.12.1", default-features = false }
# ieee80211 = { version = "0.5.0", default-features = false }
# ieee802154 = "0.6.1"
# lis3dh-async = "0.9.3"
log = "0.4.22"
#  nb = "1.1.0"
# p192 = { version = "0.13.0", default-features = false, features = [
#     "arithmetic",
# ] }
# p256 = { version = "0.13.2", default-features = false, features = [
#     "arithmetic",
# ] }
# portable-atomic = { version = "1.6.0", default-features = false }
# sha2 = { version = "0.10.8", default-features = false }
# smart-leds          = "0.4.0"
# smoltcp             = { version = "0.11.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
# ssd1306             = "0.8.4"
# static_cell = { version = "2.1.0", features = ["nightly"] }
# usb-device          = "0.3.2"
# usbd-serial         = "0.2.2"


byte = { version = "0.2.7" }
bitfield = "0.17.0"
anyhow = { version = "1.0.87", default-features = false }

limero = { path = "../esp32-limero-embassy" }
# pubsub = { path = "../pubsub" }
# serdes = { path = "../serdes" }
actors = { path = "../esp32-actors" }
serde = { version = "1.0.210", default-features = false }
msg = { path = "../msg" }

[features]
default = []


