[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp32-espnow-gateway"
publish = false
version = "0.0.0"

[dependencies]
anyhow = {workspace = true}
bitfield = {workspace = true}
byte = {workspace = true}
embassy-executor = {workspace = true}
embassy-futures = {workspace = true}
embassy-sync = {workspace = true}
embassy-time = {workspace = true}
embedded-io-async = {workspace = true}
esp-alloc = {workspace = true}
esp-backtrace = {workspace = true}
esp-hal = {workspace = true}
esp-hal-embassy = {workspace = true}
esp-wifi = {workspace = true}
log = {workspace = true}

limero = {path = "../esp32-limero-embassy"}
actors = {path = "../esp32-actors"}
msg = {path = "../msg"}

[features]
default = []
