[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp32-hoverboard"
publish = false
version = "0.0.0"

[dependencies]

embassy-executor = "*"
embassy-futures = "*"
embassy-sync = "*"
embassy-time = "*"
embedded-io-async = "*"
esp-alloc = "*"
esp-backtrace = "*"
esp-hal = "*"
esp-hal-embassy = "*"
esp-wifi = "*"
log = "*"
minicbor = {version="*", default-features = false, features = [
    "derive",
    "alloc",
    "half",
] }
anyhow = "*"

actors = {path = "../esp32-actors"}
limero = {path = "../esp32-limero-embassy"}
msg = {path = "../msg"}

[features]
default = []
