[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp32-hoverboard"
publish = false
version = "0.0.0"

[dependencies]

embassy-executor = {workspace = true }
embassy-futures = {workspace = true}
embassy-sync = {workspace = true}
embassy-time = {workspace = true}
embedded-io-async = {workspace = true}
esp-alloc = {workspace = true}
esp-backtrace = {workspace = true}
esp-hal = {workspace = true}
esp-hal-embassy = {workspace = true}
esp-wifi = {workspace = true}
log = {workspace = true}
minicbor = {workspace = true, default-features = false, features = [
    "derive",
    "alloc",
    "half",
] }
anyhow = {workspace = true}

actors = {path = "../esp32-actors"}
limero = {path = "../esp32-limero-embassy"}
msg = {path = "../msg"}

[features]
default = []
