[package]
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
name = "esp32-idf-dc-motor"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[[bin]]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
name = "esp32-idf-dc-motor" 

[profile.release]
# opt-level = "s"
# opt-level =  3
strip = false 
panic = "abort"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z" 

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

alloc = ["esp-idf-svc/alloc"]
embassy = ["esp-idf-svc/embassy-sync",  "esp-idf-svc/embassy-time-driver"]
experimental = ["esp-idf-svc/experimental"]
nightly = ["esp-idf-svc/nightly"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]

[dependencies]
anyhow = { version="1.0.93"}
esp-idf-svc = {version = "0.49", default-features = false}
log = {version = "0.4.22", default-features = false}
smol = {version = "2.0.2", default-features = false}
futures = {version = "0.3.31"}
async-channel = {version = "2.3.1"}
async-executor = {version = "1.13.1"}
async-io = {version = "2.3.4"}

esp-println = {version = "0.12.0", default-features = false,features = ["uart"]}
msg = {path = "../msg"}
esp32-limero-std = { path="../esp32-limero-std"}

[build-dependencies]
embuild = "0.32.0"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults", "sdkconfig.defaults.ble"]
esp_idf_components = ["pthread"]

