[package]
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
name = "esp32-idf-motor"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[[bin]]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
name = "esp32-idf-motor" 

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z" 

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

alloc = ["esp-idf-svc/alloc"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/embassy-time-driver"]
experimental = ["esp-idf-svc/experimental"]
nightly = ["esp-idf-svc/nightly"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]

[dependencies]
anyhow = {workspace = true}
embassy-executor = {workspace = true, version = "0.6.1", default-features = false, features = [
  "arch-std",
  "executor-thread",
  "log",
  "integrated-timers",
  "task-arena-size-32768",
]}
embassy-futures = {workspace = true}
embassy-sync = {workspace = true}
embassy-time = {workspace = true}
embassy-time-driver = {workspace = true}
esp-idf-hal = {version = "0.44.1"}
esp-idf-svc = {version = "0.49", default-features = false,features = ["embassy-time-driver"]}
log = {version = "0.4", default-features = false}
static_cell = "*"

[build-dependencies]
embuild = "0.32.0"
