[package]
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
name = "esp32-idf-motor"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[[bin]]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
name = "esp32-idf-motor" 

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z" 

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

alloc = ["esp-idf-svc/alloc"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/embassy-time-driver"]
experimental = ["esp-idf-svc/experimental"]
nightly = ["esp-idf-svc/nightly"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]

[dependencies]
anyhow = {version = "1.0.87", default-features = false}
embassy-executor = {version = "0.6.1", features = [
  "task-arena-size-32768",
  "integrated-timers",
  "executor-thread",
  "log",

]}

embassy-futures = "0.1.1"
# embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.1"
embassy-time-driver = {version = "0.1.0"}
esp-idf-hal = {version = "0.44.1"}
esp-idf-svc = {version = "0.49", default-features = false,features = [ "embassy-time-driver", "embassy-sync"]}
log = {version = "0.4", default-features = false}
static_cell = "*"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"