[package]
name = "esp32-idf-std-motor"
version = "0.1.0"
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-idf-std-motor"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow="*"
esp-idf-svc = { version = "0.49.1", features = [ "critical-section","embassy-time-driver", "embassy-sync"] }
embassy-sync = "0.6.1"
embassy-time = { version = "0.3.1", features = ["generic-queue"] }
embassy-executor = { version="0.6.3",default-features = false,features = ["integrated-timers"] }
embassy-futures="*"
enumset = "1.1.5"
minicbor = { version = "0.25.1", default-features = false, features = [
  "derive",
  "alloc",
  "half",
] }
limero  = { path="../esp32-limero-embassy"}
msg = { path="../msg"}

[build-dependencies]
embuild = "0.32.0"
cc = "1.2.1" # Necessary until a new version of `esp-idf-sys` is released
