[package]
name = "esp32-idf"
version = "0.1.0"
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-idf"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std",  "esp-idf-svc/native","json"]
json = []

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]


[dependencies]
log = { version = "*", default-features = false, features = ["std"] }
esp-idf-svc = { version = "*", default-features = false }
embedded-svc = "*"
embedded-hal = "*"
esp-idf-hal="*"
anyhow="*"
esp-idf-sys="*"
heapless="*"
minicbor = { version = "*", features=["derive","alloc","half"] }
minicbor-ser = { version = "*",  features=["alloc"]}
edge-executor = "*"
#   futures="*"
serde_json="*"
serde="*"
futures= { version = "*", features=["executor","thread-pool"] }
redis = "*"
limero = { path = "../esp32-limero-embassy" }
# embassy-executor = { version = "0.6", features = ["arch-std", "executor-thread", "log"] }
# embassy-time = { version = "*", features = ["tick-hz-1_000","generic-queue"] }
static_cell = "2"

[build-dependencies]
embuild = "0.32.0"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }
