[package]
name = "limero"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", features = [] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
esp-println = { version = "0.16.0", features = ["esp32"] }
async-channel ={ version = "2.3.1", features = [], default-features = false }
anyhow = { version = "*", features = [], default-features = false }